--- a/ParlamentoApi/packages.config
+++ b/ParlamentoApi/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hangfire.Core" version="1.6.5" targetFramework="net452" />
+  <package id="Hangfire.Ninject" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -19,5 +21,6 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
 </packages>
