--- a/ParlamentoTarefas/ParlamentoTarefas.csproj
+++ b/ParlamentoTarefas/ParlamentoTarefas.csproj
@@ -62,20 +62,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoMapperConfig.cs" />
     <Compile Include="Interfaces\ServicosExternos\IBaseServicosExternos.cs" />
-    <Compile Include="Interfaces\ServicosExternos\IExemplosServicosExternos.cs" />
     <Compile Include="Interfaces\ServicosExternos\ISenadoServicosExternos.cs" />
     <Compile Include="Interfaces\Tarefas\IBaseTarefa.cs" />
-    <Compile Include="Interfaces\Tarefas\IExemplosTarefa.cs" />
     <Compile Include="Interfaces\Tarefas\Parlamentares\IAtualizarSenadoresTarefa.cs" />
+    <Compile Include="NinjectBootstrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicosExternos\BaseServicosExternos.cs" />
-    <Compile Include="ServicosExternos\ExemplosServicosExternos.cs" />
     <Compile Include="ServicosExternos\SenadoServicosExternos.cs" />
     <Compile Include="Tarefas\ExemplosTarefa.cs" />
     <Compile Include="Tarefas\Parlamentares\AtualizarSenadoresTarefa.cs" />
-    <Compile Include="ViewModels\EntidadeViewModel.cs" />
-    <Compile Include="ViewModels\ExemploViewModel.cs" />
     <Compile Include="ViewModels\Parlamentares\ExercicioViewModel.cs" />
     <Compile Include="ViewModels\Parlamentares\IdentificacaoViewModel.cs" />
     <Compile Include="ViewModels\Parlamentares\ListaParlamentarViewModel.cs" />
@@ -94,9 +91,17 @@
       <Project>{7dcbbb3e-68ea-4677-89f8-4cc7b42d1307}</Project>
       <Name>ParlamentoAplicacao</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ParlamentoDados\ParlamentoDados.csproj">
+      <Project>{7356086B-2EF4-4D78-A9A0-3847ADB62A20}</Project>
+      <Name>ParlamentoDados</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ParlamentoDominio\ParlamentoDominio.csproj">
       <Project>{5ea05ea5-fe8e-4057-ade9-d27aad179edb}</Project>
       <Name>ParlamentoDominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ParlamentoTransversal\ParlamentoTransversal.csproj">
+      <Project>{735867DC-0A81-460F-87ED-C92C1A79363C}</Project>
+      <Name>ParlamentoTransversal</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
