--- a/ParlamentoApi/ParlamentoApi.csproj
+++ b/ParlamentoApi/ParlamentoApi.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>App_Data/ParlamentoApi.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -82,6 +83,10 @@
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
@@ -177,7 +182,13 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\ExemplosController.cs" />
+    <Compile Include="Controllers\LegislaturasController.cs" />
+    <Compile Include="Controllers\MateriasSubtiposController.cs" />
+    <Compile Include="Controllers\MateriasAssuntosController.cs" />
+    <Compile Include="Controllers\MateriasController.cs" />
+    <Compile Include="Controllers\VotosController.cs" />
+    <Compile Include="Controllers\SenadoresController.cs" />
+    <Compile Include="CustomExceptionHandler.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -221,10 +232,6 @@
       <Project>{7DCBBB3E-68EA-4677-89F8-4CC7B42D1307}</Project>
       <Name>ParlamentoAplicacao</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ParlamentoDados\ParlamentoDados.csproj">
-      <Project>{7356086B-2EF4-4D78-A9A0-3847ADB62A20}</Project>
-      <Name>ParlamentoDados</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ParlamentoDominio\ParlamentoDominio.csproj">
       <Project>{5ea05ea5-fe8e-4057-ade9-d27aad179edb}</Project>
       <Name>ParlamentoDominio</Name>
@@ -232,10 +239,6 @@
     <ProjectReference Include="..\ParlamentoTarefas\ParlamentoTarefas.csproj">
       <Project>{1E01125A-2637-4F0A-8662-952259E046FE}</Project>
       <Name>ParlamentoTarefas</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ParlamentoTransversal\ParlamentoTransversal.csproj">
-      <Project>{735867dc-0a81-460f-87ed-c92c1a79363c}</Project>
-      <Name>ParlamentoTransversal</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
