--- a/ParlamentoApi/packages.config
+++ b/ParlamentoApi/packages.config
@@ -22,5 +22,6 @@
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
 </packages>
