--- a/ParlamentoTarefas/ParlamentoTarefas.csproj
+++ b/ParlamentoTarefas/ParlamentoTarefas.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Interfaces\ServicosExternos\IBaseServicosExternos.cs" />
     <Compile Include="Interfaces\ServicosExternos\ISenadoServicosExternos.cs" />
     <Compile Include="Interfaces\Tarefas\IBaseTarefa.cs" />
+    <Compile Include="Interfaces\Tarefas\Senado\IAtualizarVotosTarefa .cs" />
     <Compile Include="Interfaces\Tarefas\Senado\IAtualizarLegislaturasTarefa.cs" />
     <Compile Include="Interfaces\Tarefas\Senado\IAtualizarMateriasTarefa.cs" />
     <Compile Include="Interfaces\Tarefas\Senado\IAtualizarSenadoresTarefa.cs" />
@@ -74,7 +75,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicosExternos\BaseServicosExternos.cs" />
     <Compile Include="ServicosExternos\SenadoServicosExternos.cs" />
+    <Compile Include="SingleOrArrayConverter.cs" />
     <Compile Include="Tarefas\Senado\AtualizarLegislaturasTarefa.cs" />
+    <Compile Include="Tarefas\Senado\AtualizarVotosTarefa.cs" />
     <Compile Include="Tarefas\Senado\AtualizarMateriasTarefa.cs" />
     <Compile Include="Tarefas\Senado\AtualizarSenadoresTarefa.cs" />
     <Compile Include="ViewModels\RespostaViewModel.cs" />
@@ -105,10 +108,6 @@
     <ProjectReference Include="..\ParlamentoDominio\ParlamentoDominio.csproj">
       <Project>{5ea05ea5-fe8e-4057-ade9-d27aad179edb}</Project>
       <Name>ParlamentoDominio</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ParlamentoTransversal\ParlamentoTransversal.csproj">
-      <Project>{735867DC-0A81-460F-87ED-C92C1A79363C}</Project>
-      <Name>ParlamentoTransversal</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
