--- a/ParlamentoDados/ParlamentoDados.csproj
+++ b/ParlamentoDados/ParlamentoDados.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recursos\OrderByExtensions.cs" />
     <Compile Include="Repositorios\BaseRepositorio.cs" />
     <Compile Include="Repositorios\Senado\LegislaturasRepositorio.cs" />
     <Compile Include="Repositorios\Senado\MateriasSubtiposRepositorio.cs" />
