--- a/ParlamentoDados/ParlamentoDados.csproj
+++ b/ParlamentoDados/ParlamentoDados.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="Z.EntityFramework.Extensions, Version=3.10.19.0, Culture=neutral, PublicKeyToken=59b66d028979105b, processorArchitecture=MSIL">
       <HintPath>..\packages\Z.EntityFramework.Extensions.3.10.19\lib\net45\Z.EntityFramework.Extensions.dll</HintPath>
       <Private>True</Private>
@@ -56,9 +57,9 @@
     <Compile Include="EntidadesConfig\Senado\VotacaoConfig.cs" />
     <Compile Include="EntidadesConfig\Senado\SenadorConfig.cs" />
     <Compile Include="EntidadesConfig\UsuarioConfig.cs" />
-    <Compile Include="Migrations\201611062217564_Inicial.cs" />
-    <Compile Include="Migrations\201611062217564_Inicial.Designer.cs">
-      <DependentUpon>201611062217564_Inicial.cs</DependentUpon>
+    <Compile Include="Migrations\201611142322250_Inicial.cs" />
+    <Compile Include="Migrations\201611142322250_Inicial.Designer.cs">
+      <DependentUpon>201611142322250_Inicial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -84,8 +85,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201611062217564_Inicial.resx">
-      <DependentUpon>201611062217564_Inicial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201611142322250_Inicial.resx">
+      <DependentUpon>201611142322250_Inicial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
