--- a/ParlamentoWeb/ParlamentoWeb.csproj
+++ b/ParlamentoWeb/ParlamentoWeb.csproj
@@ -62,7 +62,8 @@
     <Content Include="app\components\senadores\senadores.controller.js" />
     <Content Include="app\components\senadores\senadores.view.html" />
     <Content Include="app\components\senadores\partials\paginacao.partial.html" />
-    <Content Include="app\components\votos\votos.controller.js" />
+    <Content Include="app\components\senador\votos\votos.controller.js" />
+    <Content Include="app\components\senador\votos\votos.view.html" />
     <Content Include="app\directives\compare.directive.js" />
     <Content Include="app\directives\convertToNumber.directive.js" />
     <Content Include="app\helpers\fake-backend.js" />
