Gráficos dos Votos

--- a/ParlamentoWeb/ParlamentoWeb.csproj
+++ b/ParlamentoWeb/ParlamentoWeb.csproj
@@ -56,6 +56,8 @@
     <Content Include="app\components\login\login.controller.js" />
     <Content Include="app\components\materias\materias.controller.js" />
     <Content Include="app\components\materias\materias.view.html" />
+    <Content Include="app\components\materias\partials\filtros.partial.html" />
+    <Content Include="app\components\materias\partials\paginacao.partial.html" />
     <Content Include="app\components\registro\registro.controller.js" />
     <Content Include="app\components\registro\registro.view.html" />
     <Content Include="app\components\senadores\partials\filtros.partial.html" />
@@ -64,15 +66,16 @@
     <Content Include="app\components\senadores\partials\paginacao.partial.html" />
     <Content Include="app\components\senador\votos\votos.controller.js" />
     <Content Include="app\components\senador\votos\votos.view.html" />
-    <Content Include="app\directives\compare.directive.js" />
+    <Content Include="app\constants\estadosBrasileiros.constant.js" />
+    <Content Include="app\directives\match.directive.js" />
     <Content Include="app\directives\convertToNumber.directive.js" />
     <Content Include="app\helpers\fake-backend.js" />
     <Content Include="app\main.controller.js" />
     <Content Include="app\services\authentication.service.js" />
     <Content Include="app\services\rest.service.js" />
-    <Content Include="app\shared\footer.partial.html" />
-    <Content Include="app\shared\header.partial.html" />
-    <Content Include="app\shared\menu.partial.html" />
+    <Content Include="app\components\shared\footer.partial.html" />
+    <Content Include="app\components\shared\header.partial.html" />
+    <Content Include="app\components\shared\menu.partial.html" />
     <Content Include="assets\css\AdminLTE.css" />
     <Content Include="assets\css\AdminLTE.min.css" />
     <Content Include="assets\css\app.css" />
